# categorifier

./: .envrc  .gitattributes  .gitignore  .hlint.yaml  .vale.ini  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  flake.nix  garnix.yaml  hie.yaml  nixpkgs.nix  parse-cabal-project.nix
.config/: mustache.yaml
.config/emacs/: .dir-locals.el
.config/project/: default.nix  hlint.nix
.github/: settings.yml
.github/workflows/: ci.yml  (+3 more)
category/: categorifier-category.cabal  kitty-cat-category.cabal
category-kitty/: kitty-cat-category-kitty.cabal
category-unconcat/: kitty-cat-category-unconcat.cabal
category/Categorifier/: Category.hs
category/Kitty/Plugin/: Category.hs
client/: categorifier-client.cabal  kitty-cat-client.cabal
client/Categorifier/: Client.hs
client/Categorifier/Client/: Internal.hs
client/Kitty/Plugin/: Client.hs
client/Kitty/Plugin/Client/: Internal.hs
client/test/: Main.hs
common/: categorifier-common.cabal  kitty-cat-common.cabal
common/Categorifier/Common/IO/: Exception.hs
common/Kitty/Common/IO/: Exception.hs
duoids/: categorifier-duoids.cabal  kitty-cat-duoids.cabal
duoids/Categorifier/: Duoidal.hs
duoids/Categorifier/Duoidal/: Either.hs
duoids/Kitty/: Duoidal.hs
duoids/Kitty/Duoidal/: Either.hs
examples/: examples.cabal
examples/simple/: Main.hs
extensions-categories/: kitty-cat-extensions-categories.cabal
extensions-concat-test/: kitty-cat-extensions-concat-test.cabal
extensions-unconcat/: kitty-cat-extensions-unconcat.cabal
ghc/: categorifier-ghc.cabal
ghc/Categorifier/GHC/: Builtin.hs  Core.hs  Data.hs  Driver.hs  HsToCore.hs  Plugins.hs  Runtime.hs  Tc.hs  Types.hs  Unit.hs  Utils.hs
hedgehog/: categorifier-hedgehog.cabal  kitty-cat-hedgehog.cabal
hedgehog/Categorifier/: Hedgehog.hs
hedgehog/Kitty/Plugin/: Hedgehog.hs
integrations/adjunctions/extensions/: kitty-cat-adjunctions-extensions.cabal
integrations/adjunctions/extensions-test/: kitty-cat-adjunctions-extensions-test.cabal
integrations/adjunctions/extensions-test/Kitty/Plugin/Test/: Adjunctions.hs
integrations/adjunctions/extensions-test/test/Adjunctions/: Main.hs
integrations/adjunctions/extensions/Kitty/Plugin/Adjunctions/: Extensions.hs
integrations/adjunctions/integration-test/: categorifier-adjunctions-integration-test.cabal
integrations/adjunctions/integration-test/Categorifier/Test/: Adjunctions.hs
integrations/adjunctions/integration-test/test/Adjunctions/: Main.hs
integrations/base/plugin/: kitty-cat-base-plugin.cabal  kitty-cat-plugin-base.cabal
integrations/categories/extensions/: kitty-cat-categories-extensions.cabal
integrations/categories/extensions-test/: kitty-cat-categories-extensions-test.cabal
integrations/categories/extensions-test/Kitty/Plugin/Test/Categories/: Instances.hs
integrations/categories/extensions-test/Test/Plugin/Categories/: Instances.hs
integrations/categories/extensions-test/test/Categories/: Main.hs
integrations/categories/extensions-test/test/Test/Plugin/Categories/: Main.hs
integrations/categories/extensions/Kitty/Plugin/Hierarchy/: Categories.hs
integrations/categories/integration/: categorifier-categories-integration.cabal
integrations/categories/integration-test/: categorifier-categories-integration-test.cabal
integrations/categories/integration-test/Categorifier/Test/Categories/: Instances.hs
integrations/categories/integration-test/test/Categories/: Main.hs
integrations/categories/integration/Categorifier/Hierarchy/: Categories.hs
plugin/: Categorifier.hs  README.md  categorifier-plugin.cabal  kitty-cat-plugin.cabal
plugin-base/: kitty-cat-plugin-base.cabal
plugin-base/Kitty/Plugin/: Base.hs
plugin-base/Test/Plugin/: Chaos.hs
plugin-base/test/Test/: Main.hs
plugin-base/test/Test/Plugin/: CategorizeException.hs  PartialApplication.hs  WithInstance.hs
plugin-base/test/Test/Plugin/WithInstance/: Main.hs
plugin-categories/: kitty-cat-plugin-categories.cabal
plugin-concat-class/: kitty-cat-plugin-concat-class.cabal
plugin-concat-class/Kitty/Plugin/ConCat/: Class.hs
plugin-concat-class/test/Test/Plugin/ConCat/: Main.hs
plugin-concat-function/: kitty-cat-plugin-concat-function.cabal
plugin-kitty/: kitty-cat-plugin-kitty.cabal
plugin-kitty/Test/Cat/Kitty/: Instances.hs
plugin-test/: categorifier-plugin-test.cabal  kitty-cat-plugin-test.cabal
plugin-test/Categorifier/Test/: Data.hs  HList.hs  Hask.hs  TH.hs  Term.hs  Tests.hs
plugin-test/Kitty/Plugin/Test/: Data.hs  HList.hs  Hask.hs  TH.hs  Term.hs  Tests.hs
plugin-test/Test/: Main.hs
plugin-test/Test/Plugin/: Data.hs  HList.hs  Hask.hs  TH.hs  Term.hs  Tests.hs  TotOrd.hs
plugin-test/test/: Main.hs
plugin-test/test/Base/: Main.hs
plugin-test/test/Test/Plugin/Base/: Main.hs
plugin-unconcat/: kitty-cat-plugin-unconcat.cabal
plugin-unconcat/Kitty/Cat/Plugin/: UnconCat.hs
plugin-unconcat/Test/Cat/: Categories.hs
plugin-unconcat/test/Test/Cat/UnconCat/: Main.hs
plugin/Categorifier/: Benchmark.hs  Categorify.hs  Categorize.hs  CommandLineOptions.hs  Core.hs  DynFlags.hs  Hierarchy.hs  TH.hs
plugin/Categorifier/Core/: Base.hs  Benchmark.hs  BuildDictionary.hs  Categorify.hs  Categorize.hs  ErrorHandling.hs  Functions.hs  MakerMap.hs  Makers.hs  PrimOp.hs  Simplify.hs  Trace.hs  Types.hs
plugin/Categorifier/Test/: CategorizeException.hs  Chaos.hs  PartialApplication.hs  WithInstance.hs
plugin/Kitty/: Benchmark.hs  MakePlugin.hs  Plugin.hs
plugin/Kitty/Plugin/: Categorize.hs  CommandLineOptions.hs  Core.hs  Hierarchy.hs  TH.hs
plugin/Kitty/Plugin/Core/: Base.hs  Benchmark.hs  BuildDictionary.hs  Categorize.hs  ErrorHandling.hs  Functions.hs  MakerMap.hs  Makers.hs  PrimOp.hs  Simplify.hs  Trace.hs  Types.hs
plugin/Kitty/Plugin/Test/: CategorizeException.hs  Chaos.hs  PartialApplication.hs  WithInstance.hs
plugin/Kitty/Plugin/Test/WithInstance/: Main.hs
plugin/Test/Plugin/: CategorizeException.hs  Chaos.hs  PartialApplication.hs  WithInstance.hs
plugin/Test/Plugin/WithInstance/: Main.hs
th/: categorifier-th.cabal
th/Categorifier/: TH.hs
(+94 files in other folders)
