cabal-version:  2.4

name:           kitty-cat-category-unconcat
version:        0.1
description:    Unconstrained versions of Conal's ConCat classes.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.UnconCat
  other-modules:
      Paths_kitty_cat_category_unconcat
  autogen-modules:
      Paths_kitty_cat_category_unconcat
  ghc-options:
    -O2
    -Wall
  build-depends:
    , base
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
