cabal-version:  2.4

name:           categorifier-client
version:        0.1
description:    Client library for the categorifier plugin
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.4.1, GHC==9.4.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

library
  exposed-modules:
      Categorifier.Client
  other-modules:
      Categorifier.Client.Internal
      Paths_categorifier_client
  autogen-modules:
      Paths_categorifier_client
  ghc-options: -Wall
  build-depends:
    , PyF >=0.9.0 && <0.12
    , base >=4.13.0 && <4.18
    , categorifier-common
    , categorifier-duoids
    , categorifier-th
    , constraints >=0.12 && <0.14
    , extra >=1.7.8 && <1.8
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite client-instances
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base >=4.13.0 && <4.18
    , categorifier-client
    , categorifier-hedgehog
    , constraints >=0.12 && <0.14
    , fin >=0.1.1 && <0.4
    , hedgehog >=1.0.3 && <1.3
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
