cabal-version:  2.4

name:           categorifier-client
version:        0.1
description:    Client library for the categorifier plugin
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0
    , constraints ^>=0.12.0 || ^>=0.13.0
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

library
  import: defaults
  exposed-modules:
      Categorifier.Client
  other-modules:
      Categorifier.Client.Internal
      Paths_categorifier_client
  autogen-modules:
      Paths_categorifier_client
  build-depends:
    , PyF ^>=0.9.0 || ^>=0.10.0 || ^>=0.11.0
    , categorifier-common
    , categorifier-duoids
    , categorifier-th
    , extra ^>=1.7.8

test-suite client-instances
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , categorifier-client
    , categorifier-hedgehog
    , fin ^>=0.1.1 || ^>=0.2 || ^>=0.3
    , hedgehog ^>=1.0.3 || ^>=1.1 || ^>=1.2
