cabal-version:  2.4

name:           kitty-cat-client
version:        0.1
description:    Client library for the kitty-cat plugin
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.1

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.Plugin.Client
  other-modules:
      Kitty.Plugin.Client.Internal
      Paths_kitty_cat_client
  autogen-modules:
      Paths_kitty_cat_client
  ghc-options: -Wall
  build-depends:
    , base >=4.14 && <4.15
    , concat-classes
    , constraints >=0.12 && <0.14
    , extra >=1.7.8 && <2
    , template-haskell >=2.16.0.0 && <2.19
    , kitty-cat-common
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
