cabal-version:  2.4

name:           kitty-cat-client
version:        0.1
description:    Client library for the kitty-cat plugin
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.Plugin.Client
  other-modules:
      Kitty.Plugin.Client.Internal
      Paths_kitty_cat_client
  autogen-modules:
      Paths_kitty_cat_client
  ghc-options: -Wall
  build-depends:
    , base
    , constraints
    , extra
    , template-haskell
    , kitty-cat-common
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
