cabal-version:  2.4

name:           kitty-cat-client
version:        0.1
description:    Client library for the kitty-cat plugin
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.Plugin.Client
  other-modules:
      Kitty.Plugin.Client.Internal
      Paths_kitty_cat_client
  autogen-modules:
      Paths_kitty_cat_client
  ghc-options: -Wall
  build-depends:
    , base
    , constraints
    , extra
    , template-haskell
    , kitty-cat-common
    , kitty-cat-duoids
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite client-instances
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , constraints
    , fin
    , hedgehog
    , kitty-cat-client
    , kitty-cat-hedgehog
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
