cabal-version:  2.4

name:           categorifier-common
version:        0.1
description:    Common library for the categorifier plugin
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.8.1, GHC==8.10.1, GHC==8.10.7

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

library
  exposed-modules:
      Categorifier.Common.IO.Exception
  other-modules:
      Paths_categorifier_common
  autogen-modules:
      Paths_categorifier_common
  ghc-options: -Wall
  build-depends:
    , base
    , unliftio
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
