cabal-version:  2.4

name:           categorifier-common
version:        0.1
description:    Common library for the categorifier plugin
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , base >=4.13.0 && <4.17
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

library
  import: defaults
  exposed-modules:
      Categorifier.Common.IO.Exception
  other-modules:
      Paths_categorifier_common
  autogen-modules:
      Paths_categorifier_common
  build-depends:
    , PyF >=0.9.0 && <0.12
    , unliftio >=0.2.13 && <0.3
