cabal-version:  2.4

name:           kitty-cat-common
version:        0.1
description:    Common library for the kitty-cat plugin
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.Common.IO.Exception
  other-modules:
      Paths_kitty_cat_common
  autogen-modules:
      Paths_kitty_cat_common
  ghc-options: -Wall
  build-depends:
    , base
    , unliftio
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
