cabal-version:  2.4

name:           categorifier-duoids
version:        0.1
description:    Duoids
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.8.4, GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

library
  exposed-modules:
      Categorifier.Duoidal
      Categorifier.Duoidal.Either
  other-modules:
      Paths_categorifier_duoids
  autogen-modules:
      Paths_categorifier_duoids
  ghc-options: -Wall
  build-depends:
    , base
    , transformers
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
