cabal-version:  2.4

name:           kitty-cat-duoids
version:        0.1
description:    Duoids
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.1

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat-c

library
  exposed-modules:
      Kitty.Duoidal
      Kitty.Duoidal.Either
  other-modules:
      Paths_kitty_cat_duoids
  autogen-modules:
      Paths_kitty_cat_duoids
  ghc-options: -Wall
  build-depends:
    , base >=4.14 && <4.15
    , transformers >=0.5.6.2 && <0.7
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
