cabal-version:  2.4

name:           examples
version:        0.1
homepage:       https://github.com/con-kitty/categorifier-c#readme
bug-reports:    https://github.com/con-kitty/categorifier-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4, GHC==8.10.7, GHC==9.0.1, GHC==9.0.2

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier-c

executable simple
  hs-source-dirs: simple
  main-is: Main.hs
  ghc-options:
      -O0
      -fexpose-all-unfoldings
      -fmax-simplifier-iterations=0
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -Wall
      -fplugin Categorifier
      -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.Categories.hierarchy

  build-depends:
      base
    , categorifier-plugin
    , categorifier-category
    , categorifier-client
    , categorifier-categories-integration
    , categories
    , constraints
    , ghc-prim
    , mtl
  default-language: Haskell2010