cabal-version:  2.4

name:           categorifier-ghc
version:        0.1
description:    GHC-as-a-library conditionalization for Categorifier
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.4.1, GHC==8.6.1, GHC==8.8.1, GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

library
  exposed-modules:
      Categorifier.GHC.Builtin
      Categorifier.GHC.Core
      Categorifier.GHC.Data
      Categorifier.GHC.Driver
      Categorifier.GHC.HsToCore
      Categorifier.GHC.Runtime
      Categorifier.GHC.Tc
      Categorifier.GHC.Types
      Categorifier.GHC.Unit
      Categorifier.GHC.Utils
      Paths_categorifier_ghc
  autogen-modules:
      Paths_categorifier_ghc
  ghc-options:
    -O2
    -fignore-interface-pragmas
    -Wall
  build-depends:
    , PyF
    , base
    , bytestring
    , containers
    , ghc
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
