cabal-version:  2.4

name:           categorifier-ghc
version:        0.1
description:    GHC-as-a-library conditionalization for Categorifier
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.4.1, GHC==9.4.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

library
  exposed-modules:
      Categorifier.GHC.Builtin
      Categorifier.GHC.Core
      Categorifier.GHC.Data
      Categorifier.GHC.Driver
      Categorifier.GHC.HsToCore
      Categorifier.GHC.Plugins
      Categorifier.GHC.Runtime
      Categorifier.GHC.Tc
      Categorifier.GHC.Types
      Categorifier.GHC.Unit
      Categorifier.GHC.Utils
      Paths_categorifier_ghc
  autogen-modules:
      Paths_categorifier_ghc
  ghc-options:
    -O2
    -fignore-interface-pragmas
    -Wall
  build-depends:
    , PyF >=0.9.0 && <0.12
    , base >=4.13.0 && <4.18
    , bytestring >=0.10.9 && <0.12
    , containers >=0.6.2 && <0.7
    , ghc >=8.8.1 && <9.5
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
