cabal-version:  2.4

name:           kitty-cat-plugin-concat-class
version:        0.1
description:    Plugin using Conal's ConCat classes.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

common options
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -Wall

library
  import: options
  exposed-modules:
      Kitty.Plugin.ConCat.Class
  other-modules:
      Paths_kitty_cat_plugin_concat_class
  autogen-modules:
      Paths_kitty_cat_plugin_concat_class
  ghc-options: -Wall
  build-depends:
    , base
    , ghc
    , kitty-cat-extensions-concat
    , kitty-cat-plugin
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite concat-class-hierarchy
  import: options
  type:          exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:       Test/Plugin/ConCat/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin.ConCat.Class
    -fplugin-opt Kitty.Plugin.ConCat.Class:defer-failures
    -O0
  build-depends:
    , adjunctions
    , base
    , concat-classes
    , concat-examples
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-concat-class
    , kitty-cat-plugin-test
    , template-haskell

test-suite concat-class-hierarchy-optimized
  import: options
  type:          exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:       Test/Plugin/ConCat/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin.ConCat.Class
    -fplugin-opt Kitty.Plugin.ConCat.Class:defer-failures
    -O2
    -fignore-interface-pragmas
  build-depends:
    , adjunctions
    , base
    , concat-classes
    , concat-examples
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-concat-class
    , kitty-cat-plugin-test
    , template-haskell
