cabal-version:  2.4

name:           kitty-cat-plugin-kitty
version:        0.1
description:    Plugin using our extensions to Conal's ConCat functions.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

common options
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -Wall

library
  import: options
  exposed-modules:
      Kitty.Cat.Plugin.Kitty
  other-modules:
      Paths_kitty_cat_plugin_kitty
  autogen-modules:
      Paths_kitty_cat_plugin_kitty
  build-depends:
    , base
    , ghc
    , kitty-cat-extensions-concat
    , kitty-cat-extensions-kitty
    , kitty-cat-plugin
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

library kitty-instances
  exposed-modules:
      Test.Cat.Kitty.Instances
  build-depends:
    , base
    , concat-classes
    , kitty-cat-category-kitty
    , kitty-cat-extensions-concat-test
    , kitty-cat-plugin-test
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite kitty-hierarchy
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test/Cat/Kitty/Main.hs
  ghc-options:
    -fplugin Kitty.Cat.Plugin.Kitty
    -O0
  build-depends:
    , adjunctions
    , base
    , concat-classes
    , concat-examples
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-category-kitty
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-kitty
    , kitty-cat-plugin-test
    , kitty-instances
    , linear
    , template-haskell

test-suite kitty-hierarchy-optimized
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test/Cat/Kitty/Main.hs
  ghc-options:
    -fplugin Kitty.Cat.Plugin.Kitty
    -O2
    -fignore-interface-pragmas
  build-depends:
    , adjunctions
    , base
    , concat-classes
    , concat-examples
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-category-kitty
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-kitty
    , kitty-cat-plugin-test
    , kitty-instances
    , linear
    , template-haskell
